manifests/chill-farm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chill-farm
  labels:
    name: chill-farm
