manifests/chill-farm/cross-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chill-cross
  namespace: chill-farm
  labels:
    app: chill-cross
spec:
  type: ClusterIP
  selector:
    app: chill-cross
  ports:
  - name: ws
    port: 8080
    targetPort: ws
    protocol: TCP
