manifests/chill-farm/pasture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chill-pasture
  namespace: chill-farm
  labels:
    app: chill-pasture
spec:
  type: ClusterIP
  selector:
    app: chill-pasture
  ports:
  - name: ws
    port: 8080
    targetPort: ws
    protocol: TCP
