manifests/chill-farm/ranch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chill-ranch
  namespace: chill-farm
  labels:
    app: chill-ranch
spec:
  type: ClusterIP
  selector:
    app: chill-ranch
  ports:
  - name: ws
    port: 8080
    targetPort: ws
    protocol: TCP
