manifests/chill-farm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chill-farm
  namespace: chill-farm
  labels:
    app: chill-farm
spec:
  type: ClusterIP
  selector:
    app: chill-farm
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
