manifests/chill-farm/splash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chill-splash
  namespace: chill-farm
  labels:
    app: chill-splash
spec:
  type: ClusterIP
  selector:
    app: chill-splash
  ports:
  - name: ws
    port: 8080
    targetPort: ws
    protocol: TCP
